objects/Marketing_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HandsMen_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HandsMen Customer</label>
        <referenceTo>HandsMen_Customer__c</referenceTo>
        <relationshipLabel>Marketing Campaigns</relationshipLabel>
        <relationshipName>Marketing_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <type>Date</type>
    </fields>
    <label>Marketing Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MC -{0000}</displayFormat>
        <label>Marketing Campaign Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>